--- a/dior.html
+++ b/dior.html
@@ -3,6 +3,12 @@
     <head>
         <title>Dior</title>
         <link rel="stylesheet" href="style dior.css">
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+        <meta charset="UTF-8">
+        <meta name="author" content="Alisina Mohammadi" >
+        <meta name="description" content="Perfume Shop">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords" content="parfum, perfume, dior, ea, emporio armani, montale, azzaro">
     </head>
     <body>
         <div class="grid-layout">
@@ -20,6 +26,16 @@
             <div id="dior-elixir"><img src="images/dior elixir.png" alt="Dior Elixir PARFUM" id="dior-elixir"></div>
             <div id="dior-elixir-text">Dior <br>Sauvage<br>Elixir<br> 100ml<br><br>€ 195,20</div>
             <div id="main-page"><a href="main page.html"><button id="main-page">Main Page</button></a></div>
+            <div id="logo"><img src="images/perfume shop logo.png" alt="perfume shop logo" id="logo"></div>
+            <div id="account"><a href="account.html" target="_blank"><button id="account-winkel-mandje-button"><img src="images/account symbol.png" alt="Account" id="account"></button></div>
+            <div id="winkel-mandje"><a href="winkel mandje.html" target="_blank"><button id="account-winkel-mandje-button"><img src="images/winkel mandje.png" alt="Winkel Mandje" id="winkel-mandje"></button></a></div>
+            <div id="zoeken"><img src="images/zoek icoontje.png" alt="zoeken" id="zoeken"></div>
+            <div id="zoekbalkje"><input id="zoekbalkje"></div>
+            <footer id="footer">
+                    <div id="adress-icon"><img src="images/adress icon.png" alt="Adress" id="adress-icon"><br><p>PerfumeShopstraat 1, 1234 XL Almere</p></div>
+                    <div id="phone-icon"><img src="images/phone icon.png" alt="Number" id="phone-icon"><br><p>+31 6 12345678</p></div>
+                    <div id="email-icon"><img src="images/Email icon.png" alt="Email" id="email-icon"><br><p>PerfumeShop@gmail.com</p></div>           
+            </footer>
         </div>
     </body>
 </html>
