--- a/main page.html
+++ b/main page.html
@@ -3,6 +3,7 @@
     <head>
         <title>perfume shop</title>
         <link rel="stylesheet" href="style main page.css">
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     </head>
     <body>
         <div class="grid-layout">
